@@ -1,4 +1,5 @@
 1.0.0
+ * NullPointerException when reading static column with null values (CASSANDRA-19626)
  * Integrate with the latest sidecar client (CASSANDRA-19616)
  * Support bulk write via S3 (CASSANDRA-19563)
  * Support UDTs in the Bulk Writer (CASSANDRA-19340)
